[gd_scene load_steps=16 format=3 uid="uid://t7civ2atacxb"]

[ext_resource type="Texture2D" uid="uid://c0bnb5jrg6ysw" path="res://Player/tile_0085.png" id="1_ds3ek"]
[ext_resource type="Script" path="res://GUI/gui.gd" id="1_y6usf"]
[ext_resource type="FontVariation" uid="uid://yp4accwh2xbv" path="res://GUI/Fontes/gui.tres" id="2_qn50h"]
[ext_resource type="Texture2D" uid="uid://p374tycf0yk" path="res://Player/Espada Pena/espada pena.png" id="4_3m22x"]
[ext_resource type="Texture2D" uid="uid://cghlj2d8b7duk" path="res://GUI/icons/esteira_icon.png" id="4_c62ko"]
[ext_resource type="Texture2D" uid="uid://cni0y2ke8jjd2" path="res://Geradores/Fornalha/sprite_1.png" id="5_bncc0"]
[ext_resource type="Texture2D" uid="uid://d4mikx18lbhqt" path="res://GUI/pie_icon.png" id="5_xuyyk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vv2ha"]
bg_color = Color(0.494118, 0.494118, 0.494118, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2y125"]
bg_color = Color(1, 0, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rwwvc"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wooa4"]
bg_color = Color(0.427451, 0.427451, 0.427451, 0.827451)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sv28r"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hmmtt"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jcdj8"]
bg_color = Color(0.913725, 1, 0.054902, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f5g48"]
bg_color = Color(1, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[node name="GUI" type="CanvasLayer"]
script = ExtResource("1_y6usf")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="MainHBox" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 15

[node name="Rows" type="VBoxContainer" parent="MarginContainer/MainHBox"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="TopRow" type="HBoxContainer" parent="MarginContainer/MainHBox/Rows"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="ResourceContainer" type="HBoxContainer" parent="MarginContainer/MainHBox/Rows/TopRow"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2

[node name="ResourceImg" type="TextureRect" parent="MarginContainer/MainHBox/Rows/TopRow/ResourceContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("1_ds3ek")

[node name="ResourceLabel" type="Label" parent="MarginContainer/MainHBox/Rows/TopRow/ResourceContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("2_qn50h")
theme_override_font_sizes/font_size = 75
text = "30"

[node name="MiddleRow" type="HBoxContainer" parent="MarginContainer/MainHBox/Rows"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 10.0
mouse_filter = 2

[node name="BottomRow" type="HBoxContainer" parent="MarginContainer/MainHBox/Rows"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/separation = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MainHBox/Rows/BottomRow"]
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MainHBox/Rows/BottomRow/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Tower1Img" type="TextureRect" parent="MarginContainer/MainHBox/Rows/BottomRow/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("1_ds3ek")

[node name="T1Cost" type="Label" parent="MarginContainer/MainHBox/Rows/BottomRow/VBoxContainer/HBoxContainer/Tower1Img"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -18.5
offset_right = 16.0
offset_bottom = 18.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("2_qn50h")
theme_override_font_sizes/font_size = 75
text = "30"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Tower2Img" type="TextureRect" parent="MarginContainer/MainHBox/Rows/BottomRow/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("1_ds3ek")

[node name="T2Cost" type="Label" parent="MarginContainer/MainHBox/Rows/BottomRow/VBoxContainer/HBoxContainer/Tower2Img"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -18.5
offset_right = 16.0
offset_bottom = 18.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("2_qn50h")
theme_override_font_sizes/font_size = 75
text = "30"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Tower3Img" type="TextureRect" parent="MarginContainer/MainHBox/Rows/BottomRow/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("1_ds3ek")

[node name="T3Cost" type="Label" parent="MarginContainer/MainHBox/Rows/BottomRow/VBoxContainer/HBoxContainer/Tower3Img"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -18.5
offset_right = 16.0
offset_bottom = 18.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("2_qn50h")
theme_override_font_sizes/font_size = 75
text = "30"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/MainHBox/Rows/BottomRow/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Gen1Img" type="TextureRect" parent="MarginContainer/MainHBox/Rows/BottomRow/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("4_c62ko")

[node name="Gen1Cost" type="Label" parent="MarginContainer/MainHBox/Rows/BottomRow/VBoxContainer/HBoxContainer2/Gen1Img"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -18.5
offset_right = 16.0
offset_bottom = 18.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("2_qn50h")
theme_override_font_sizes/font_size = 75
text = "30"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Gen2Img" type="TextureRect" parent="MarginContainer/MainHBox/Rows/BottomRow/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("5_bncc0")

[node name="Gen2Cost" type="Label" parent="MarginContainer/MainHBox/Rows/BottomRow/VBoxContainer/HBoxContainer2/Gen2Img"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -18.5
offset_right = 16.0
offset_bottom = 18.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("2_qn50h")
theme_override_font_sizes/font_size = 75
text = "30"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Gen3Img" type="TextureRect" parent="MarginContainer/MainHBox/Rows/BottomRow/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("1_ds3ek")

[node name="Gen3Cost" type="Label" parent="MarginContainer/MainHBox/Rows/BottomRow/VBoxContainer/HBoxContainer2/Gen3Img"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -18.5
offset_right = 16.0
offset_bottom = 18.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("2_qn50h")
theme_override_font_sizes/font_size = 75
text = "30"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthContainer" type="VBoxContainer" parent="MarginContainer/MainHBox/Rows/BottomRow"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="HealthLabel" type="Label" parent="MarginContainer/MainHBox/Rows/BottomRow/HealthContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("2_qn50h")
theme_override_font_sizes/font_size = 75
text = "30/100"
horizontal_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/MainHBox/Rows/BottomRow/HealthContainer"]
custom_minimum_size = Vector2(500, 30)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 2
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxFlat_vv2ha")
theme_override_styles/fill = SubResource("StyleBoxFlat_2y125")
value = 50.0
show_percentage = false

[node name="Power1Img" type="TextureRect" parent="MarginContainer/MainHBox/Rows/BottomRow"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("4_3m22x")

[node name="P1Cooldown" type="ProgressBar" parent="MarginContainer/MainHBox/Rows/BottomRow/Power1Img"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxFlat_rwwvc")
theme_override_styles/fill = SubResource("StyleBoxFlat_wooa4")
value = 40.0
show_percentage = false

[node name="P1Timer" type="Timer" parent="MarginContainer/MainHBox/Rows/BottomRow/Power1Img"]
one_shot = true

[node name="Power2Img" type="TextureRect" parent="MarginContainer/MainHBox/Rows/BottomRow"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("5_xuyyk")

[node name="P2Cooldown" type="ProgressBar" parent="MarginContainer/MainHBox/Rows/BottomRow/Power2Img"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxFlat_rwwvc")
theme_override_styles/fill = SubResource("StyleBoxFlat_wooa4")
value = 40.0
show_percentage = false

[node name="P2Timer" type="Timer" parent="MarginContainer/MainHBox/Rows/BottomRow/Power2Img"]
one_shot = true

[node name="Control" type="Control" parent="MarginContainer/MainHBox/Rows/BottomRow"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="EnergyContainer" type="VBoxContainer" parent="MarginContainer/MainHBox"]
layout_mode = 2
mouse_filter = 2

[node name="EnergyBarContainer" type="PanelContainer" parent="MarginContainer/MainHBox/EnergyContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sv28r")

[node name="YellowEnergyBar" type="ProgressBar" parent="MarginContainer/MainHBox/EnergyContainer/EnergyBarContainer"]
custom_minimum_size = Vector2(30, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxFlat_hmmtt")
theme_override_styles/fill = SubResource("StyleBoxFlat_jcdj8")
step = 1.0
value = 80.0
fill_mode = 3
show_percentage = false

[node name="RedEnergyBar" type="ProgressBar" parent="MarginContainer/MainHBox/EnergyContainer/EnergyBarContainer"]
custom_minimum_size = Vector2(30, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxFlat_hmmtt")
theme_override_styles/fill = SubResource("StyleBoxFlat_f5g48")
step = 1.0
value = 50.0
fill_mode = 3
show_percentage = false

[node name="EnergyLabel" type="Label" parent="MarginContainer/MainHBox/EnergyContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("2_qn50h")
theme_override_font_sizes/font_size = 75
text = "030/100"
horizontal_alignment = 1

[node name="Control" type="Control" parent="MarginContainer/MainHBox/EnergyContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
